# c_compiler

./: .gitignore  Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: asm.rs  asm_ast.rs  asm_gen.rs  debugging_printer.rs  fix_instructions.rs  lib.rs  reg_alloc.rs
codegen/src/asm/: instructions.rs
codegen/src/asm_gen/: gen_control_flow.rs  gen_operations.rs
compiler_driver/: Cargo.toml
compiler_driver/src/: files.rs  main.rs  stages.rs
emitter/: Cargo.toml
emitter/src/: lib.rs  write_instructions.rs  write_static_variables.rs
emitter/src/write_instructions/: to_x86_asm.rs
ir_gen/: Cargo.toml
ir_gen/src/: gen_expressions.rs  gen_statements.rs  lib.rs  print_ir.rs  tacky.rs
ir_gen/src/gen_expressions/: gen_logical_expressions.rs
ir_gen/src/tacky/: instructions.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  token.rs
lexer/src/token/: token_impl.rs
parser/: Cargo.toml
parser/src/: ast.rs  expressions.rs  lib.rs  parse_declarations.rs  parse_err.rs  parse_expressions.rs  parse_statement.rs  parser.rs  print_ast.rs
parser/src/ast/: expressions.rs
parser/src/parse_expressions/: parse_factor.rs
parser/src/parser/: parse_err.rs  parse_expressions.rs  parse_statement.rs
semantic_analysis/: Cargo.toml
semantic_analysis/src/: identifier_resolution.rs  lib.rs  loop_labeling.rs  semantic_error.rs  type_checker.rs  variable_resolution.rs
semantic_analysis/src/identifier_resolution/: resolve_declaration.rs  (+2 more)
shared_context/: Cargo.toml
shared_context/src/: asm_symbol_table.rs  interner.rs  lib.rs  source_map.rs  symbol_interner.rs  symbol_registry.rs  symbol_table.rs  type_interner.rs
(+7 files in other folders)
