[workspace]

resolver = "3"

members = ["codegen",
    "compiler_driver", "emitter", "lexer", "parser"
, "ir_gen", "semantic_analysis", "shared_context"]


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"
overflow-checks = false  # Disable integer overflow checks (use with caution!)
