[package]
name = "compiler_driver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
parse = { path = "../parse" }
semantic_analysis = { path = "../semantic_analysis" }
codegen = { path = "../codegen" }
emitter = { path = "../emitter" }
ir_gen = { path = "../ir_gen" }
